single_user_clients/templates/esm/esm.yml
kind: Service
apiVersion: v1
metadata:
  name: esm-service
  namespace: TEMPLATE_ESP_NAMESPACE
spec:
  selector:
    app: esm
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: esm-deployment
  namespace: TEMPLATE_ESP_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esm
  template:
    metadata:
      labels:
        app: esm
    spec:
      serviceAccountName: esp-operator
      containers:
      - name: esm-container
        image: TEMPLATE_ESM_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
           - mountPath: /mnt/data
             name: data
           - mountPath: "/opt/sas/viya/config/etc/sysconfig/sas-esm-service/default"
             name: esm-license
             readOnly: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: esp-pv
        - name: esm-license
          secret:
            secretName: esm-license
