single_user_clients/templates/esm/ingress-esm.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: esm.TEMPLATE_ESP_NAMESPACE.TEMPLATE_ESP_DOMAIN
    http:
      paths:
      -  backend:
          serviceName: esm-service # the service to hit
          servicePort: 80            # externally exposed port
